# openenv-email-triage

./: README.md
openenv-email-triage/: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
openenv-email-triage/email_triage_env/: __init__.py  client.py  environment.py  grader.py  models.py  tasks.py
openenv-email-triage/openenv_email_triage/: __init__.py
openenv-email-triage/openenv_email_triage/env/: __init__.py  client.py  environment.py  grader.py  tasks.py
openenv-email-triage/openenv_email_triage/models/: __init__.py  schemas.py
openenv-email-triage/server/: __init__.py  app.py  email_triage_environment.py  requirements.txt
